--- a/package.json
+++ b/package.json
@@ -3,9 +3,14 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "animejs": "^3.0.1",
+    "aos": "^3.0.0-beta.6",
+    "bootstrap": "4.1.3",
+    "jquery": "^3.3.1",
     "react": "^16.8.2",
     "react-dom": "^16.8.2",
-    "react-scripts": "2.1.5"
+    "react-scripts": "2.1.5",
+    "waypoints": "^4.0.1"
   },
   "scripts": {
     "start": "react-scripts start",
