--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "dependencies": {
     "animejs": "^3.0.1",
     "aos": "^3.0.0-beta.6",
-    "bootstrap": "4.1.3",
+    "bootstrap": "^4.3.1",
     "jquery": "^3.3.1",
     "react": "^16.8.2",
     "react-dom": "^16.8.2",
